--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="......."
-        tools:layout_editor_absoluteY="215dp"
-        tools:layout_editor_absoluteX="180dp" />
+        android:text="QQ"
+        tools:layout_editor_absoluteX="180dp"
+        tools:layout_editor_absoluteY="215dp" />
 
 </android.support.constraint.ConstraintLayout>
