Edit TextView for QQ

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QQ"
+        android:text=" Develop Branch Edited "
         tools:layout_editor_absoluteX="180dp"
         tools:layout_editor_absoluteY="215dp" />
 
